logs/move.log
  File "./utils/move.py", line 11
    print(data))
        ^
SyntaxError: invalid syntax
